[package]
name = "rtctest"
version = "0.1.0"
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.18"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-serde-json = "0.2"
failure = "0.1"
